[package]
name = "piston2d-glium_graphics"
version = "0.43.0"
authors = [
    "Eduard Bopp <eduard.bopp@aepsil0n.de>",
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["graphics", "2d", "glium", "piston"]
description = "A Glium 2D back-end for the Piston game engine"
license = "MIT"
repository = "https://github.com/PistonDevelopers/glium_graphics.git"
homepage = "https://github.com/PistonDevelopers/glium_graphics"
documentation = "https://docs.rs/piston2d-glium_graphics"

[lib]
name = "glium_graphics"


[dependencies.glium]
version = "0.17.0"
default_features = false

[dependencies]
image = "0.16.0"
piston-shaders_graphics2d = "0.3.1"
piston-texture = "0.5.0"
piston = "0.34.0"
shader_version = "0.3.0"
pistoncore-glutin_window = "0.40.0"

[dependencies.piston2d-graphics]
version = "0.22.0"
features = ["glyph_cache_rusttype"]
