[package]
name = "piston2d-glium_graphics"
version = "0.79.0"
authors = [
    "Eduard Bopp <eduard.bopp@aepsil0n.de>",
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["graphics", "2d", "glium", "piston"]
description = "A Glium 2D back-end for the Piston game engine"
license = "MIT"
repository = "https://github.com/PistonDevelopers/glium_graphics.git"
homepage = "https://github.com/PistonDevelopers/glium_graphics"
documentation = "https://docs.rs/piston2d-glium_graphics"

[lib]
name = "glium_graphics"

[features]
default = ["glium_window", "image", "check_current_window"]
glium_window = ["piston", "pistoncore-glutin_window"]
check_current_window = []

[dependencies.glium]
version = "0.26.0"
default_features = false

[dependencies]
image = { version = "0.23.0", optional = true }
piston-shaders_graphics2d = "0.3.1"
piston-texture = "0.8.0"
piston = { version = "0.52.0", optional = true }
shader_version = "0.7.0"
pistoncore-glutin_window = { version = "0.66.0", optional = true }

[dependencies.piston2d-graphics]
version = "0.36.0"
features = ["glyph_cache_rusttype"]
